--- a/views/index.ejs
+++ b/views/index.ejs
@@ -374,6 +374,7 @@
             <button type="submit" class="submit-button" id="submitButton">
               Send Message
             </button>
+            <p>Message are sent slow because of low CPU in free plan</p>
             <div class="loading-indicator" id="loadingIndicator">
               <div class="spinner"></div>
               <span>Sending your message...</span>
