--- a/views/index.ejs
+++ b/views/index.ejs
@@ -327,20 +327,22 @@
         </p>
         <div class="contact-container">
           <div class="contact-info">
-            <div class="contact-item">
-              <i class="fas fa-envelope contact-icon"></i>
-              <div>
-                <h3>Email</h3>
-                <a href="mailto:kswamy94810@gmail.com" class="mail"
-                  >kswamy94810@gmail.com</a
-                >
+            <div class="contact-info-moblie">
+              <div class="contact-item">
+                <i class="fas fa-envelope contact-icon"></i>
+                <div>
+                  <h3>Email</h3>
+                  <a href="mailto:kswamy94810@gmail.com" class="mail"
+                    >kswamy94810@gmail.com</a
+                  >
+                </div>
               </div>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-map-marker-alt contact-icon"></i>
-              <div>
-                <h3>Location</h3>
-                <p>Bengaluru, Karnataka</p>
+              <div class="contact-item">
+                <i class="fas fa-map-marker-alt contact-icon"></i>
+                <div>
+                  <h3>Location</h3>
+                  <p>Bengaluru, Karnataka</p>
+                </div>
               </div>
             </div>
             <div class="social-links">
@@ -387,7 +389,6 @@
             <button type="submit" class="submit-button" id="submitButton">
               Send Message
             </button>
-            <p>Message are sent slow because of low CPU in free plan</p>
             <div class="loading-indicator" id="loadingIndicator">
               <div class="spinner"></div>
               <span>Sending your message...</span>
