--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
             <a href="#projects" class="cta-button">View My Projects</a>
           </div>
           <div class="profile-image">
-            <img src="/assets/h.jpg" alt="Kumar Swamy" />
+            <img src="/assets/mypic.jpg" alt="Kumar Swamy" />
           </div>
         </div>
       </div>
@@ -401,16 +401,8 @@
 
     <!-- Footer -->
     <footer class="site-footer">
-      <div class="container">
-        <div class="footer-links">
-          <a href="#home" class="footer-link">Home</a>
-          <a href="#about" class="footer-link">About</a>
-          <a href="#skills" class="footer-link">Skills</a>
-          <a href="#projects" class="footer-link">Projects</a>
-          <a href="#contact" class="footer-link">Contact</a>
-        </div>
         <p class="copyright">
-          &copy; <%= new Date().getFullYear() %> Kumar Swamy. All rights
+          &copy; <%= new Date().getFullYear() %> Kumarswamy J S . All rights
           reserved.
         </p>
       </div>
