--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <header class="site-header">
       <div class="container">
         <nav class="main-navigation">
-          <div class="logo"><a href="#home">Kumarjs.dev</a></div>
+          <div class="logo"><a href="#" onclick="location.reload(); return false ;">Kumarjs.dev</a></div>
           <ul class="navigation-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -237,10 +237,9 @@
             <div class="project-details">
               <h3 class="project-title">Movie Review</h3>
               <p class="project-description">
-                A full-stack web app to search and review movies and series
-                using the OMDb API. Users can filter by type, year, and ratings,
-                view details, and add personal reviews.
-              </p>
+              A full-stack web application for searching and reviewing movies and series using the OMDb API.
+              It features my personal collection  with filters by type, release year, and ratings. I can 
+              view detailed information and add my own reviews.</p>
               <div class="project-technologies">
                 <span class="technology-tag">EJS</span>
                 <span class="technology-tag">CSS3</span>
