--- a/views/index.ejs
+++ b/views/index.ejs
@@ -392,6 +392,7 @@
               <div class="spinner"></div>
               <span>Sending your message...</span>
             </div>
+            <p>Mail can't be send in free trial plan , plz use the mail id at top/left to contact <br/>Thank you ! 😊</p>
             <div class="form-message" id="formMessage"></div>
           </form>
         </div>
